--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 # Compiled class file
 *.class
+*.setting
+.classpath
+.factorypaty
+.project
+HELP.md
+mvnw
+mvnw.cmd
+
+target
+target/*
 
 # Log file
 *.log
@@ -21,3 +31,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# maven
+*.mvn
